<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.SignUpActivity"
    android:padding="60dp">
    <ImageView
        android:clickable="true"
        android:id="@+id/profile_icon"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:src="@drawable/profile_icon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/good_job"
        android:layout_gravity ="center"
        android:fontFamily="@font/bungee"
        android:textSize="35sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/you_got"
        android:layout_gravity ="center"
        android:fontFamily="@font/bungee"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/currentGameScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity ="center"
        android:fontFamily="@font/bungee"
        android:textSize="25sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/points"
        android:layout_gravity ="center"
        android:fontFamily="@font/bungee"
        android:textSize="25sp" />

    <Button
        android:id="@+id/start_again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:background="#000"
        android:text="@string/start_again"
        android:textColor="#fff" />
</LinearLayout>