<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.SignUpActivity"
    android:padding="60dp">

    <ImageView
        android:clickable="true"
        android:id="@+id/profile_icon"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:src="@drawable/profile_icon" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="280dp"
        android:layout_height="136dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:src="@drawable/bird4" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="257dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bungee"
        android:text="@string/ready_to_start"
        android:textSize="25sp" />

    <Button
        android:id="@+id/start_yes"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="10dp"
        android:background="#000"
        android:elevation="0dp"
        android:text="@string/yes"
        android:textColor="#fff" />

    <Button
        android:id="@+id/start_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="#000"
        android:elevation="0dp"
        android:text="@string/no"
        android:textColor="#fff" />

</LinearLayout>